# qfaktury

./: .gitignore  CMakeLists.txt  README.md
qfaktury/: CMakeLists.txt
qfaktury-core/: CMakeLists.txt
qfaktury-core/Class/: CMakeLists.txt  Contractor.cpp  Contractor.h  Product.cpp  Product.h  product.cc  product.h
qfaktury-core/Database/: CMakeLists.txt  database_manager.cc  database_manager.h
qfaktury-core/DatabaseClass/: CMakeLists.txt  ProductDao.cpp  product_dao.cc  product_dao.h
qfaktury-core/Exception/: CMakeLists.txt  EmailException.cpp  EmailException.h  NIPException.cpp  NIPException.h  PhoneException.cpp  PhoneException.h  PostCodeException.cpp  PostCodeException.h  money_exception.cc  money_exception.h
qfaktury-core/Model/: CMakeLists.txt  ProductModel.cpp  ProductModel.h  product_model.cc  product_model.h
qfaktury-core/Money/: CMakeLists.txt  money.cc  money.h
qfaktury-core/TypeClass/: Address.cpp  Address.h  EmailType.cpp  EmailType.h  NIP.cpp  NIP.h  NIPType.cpp  NIPType.h  PhoneType.cpp  PhoneType.h  PostCode.cpp  PostCode.h  PostCodeType.cpp  PostCodeType.h  Price.cpp  Price.h  PriceType.cpp  PriceType.h
qfaktury-test/: CMakeLists.txt  main.cc
qfaktury-test/MoneyTest/: CMakeLists.txt  money_test.cc  money_test.h
qfaktury/src/: backup.cpp  buyerdata.cpp  buyers.cpp  buyers.h  buyerslist.cpp  const.h  convertamount.cpp  correction.cpp  csvexport.cpp  custompayment.cpp  deliverynote.cpp  duplicate.cpp  fwd.hpp  goods.cpp  goods.h  goodsgrosslist.cpp  goodsissuednotes.cpp  goodslist.cpp  invoice.cpp  invoicedata.cpp  invoicedata.h  invoicerr.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  messagehandler.h  organizer.cpp  saftfileoutput.cpp  saftfileoutput.h  send.cpp  send.h  setting.cpp  setting.ui  settings.cpp  settings.h  user.cpp  user.ui  validations.cpp  warehouse.cpp  (+2 more)
qfaktury/src/Dialog/: ProductDialog.cpp  ProductDialog.h  ProductDialog.ui
qfaktury/src/SimpleSmtp_SSL_QT5/smtp_attachements/: emailwindow.cpp  smtp.cpp
qfaktury/src/TableView/: ProductTableView.cpp  ProductTableView.h  ProductTableView.ui
